# bevy_query_observer

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs
src/observer/: mod.rs  start.rs  stop.rs
