[package]
name = "bevy_query_observer"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Corvus Prudens <corvusprudens@gmail.com>"]
description = "More sophisticated observers for Bevy"
readme = "README.md"
repository = "https://github.com/corvusprudens/bevy_query_observer"
documentation = "https://docs.rs/bevy_query_observer"
keywords = ["gamedev", "bevy"]
categories = ["game-development"]

[dependencies]
bevy_ecs = { version = "0.17.3", default-features = false }
bevy_app = { version = "0.17.3", default-features = false }
bevy_utils = { version = "0.17.3", default-features = false }
bevy_platform = { version = "0.17.3", default-features = false, features = ["alloc"] }
log = "0.4"
variadics_please = "1.1.0"

[dev-dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["bevy_log"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
